fixed some formatting

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,8 +10,7 @@
     </head>
 
     <body>
-        <main>
-            {% block main %}{% endblock main %}</main>
+        <main>{% block main %}{% endblock main %}</main>
 
         <footer>
             <script type="javascript" src="{{url_for('static', filename='js/bootstrap.min.js')}}"></script>
