--- a/templates/base.html
+++ b/templates/base.html
@@ -5,14 +5,77 @@
         <meta charset="utf-8">
         <title>Prototype</title>
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+        <!--
+            Links to Bootstrap 4 and personal CSS stylsheets.
+            BS4 is placed first as the default. Personal CSS files are added next to override BS4 where needed.
+        -->
         <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/bootstrap.min.css')}}">
         <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/style.css')}}">
     </head>
 
     <body>
+        <!--Header for each page-->
+        <div class="jumbotron jumbotron-fluid bg-dark text-white">
+            <div class="container text-center">
+                <h1>Matt, Miguel, and Rani (the best)</h1>
+            </div>
+        </div>
+        
+        <!--Navbar-->
+        <nav class="navbar navbar-expand-lg navbar-light bg-warning">
+            <a class="navbar-brand" href="#">Welcome</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+          
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                  <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Link</a>
+                </li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Dropdown
+                  </a>
+                  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="#">Action</a>
+                    <a class="dropdown-item" href="#">Another action</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="#">Something else here</a>
+                  </div>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link disabled" href="#">Disabled</a>
+                </li>
+              </ul>
+              <form class="form-inline my-2 my-lg-0">
+                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+              </form>
+            </div>
+          </nav>
+
+        <!--Content for each inidividual page goes here-->
         <main>{% block main %}{% endblock main %}</main>
 
+        <!--Footer for each page-->
         <footer>
-            <script type="javascript" src="{{url_for('static', filename='js/bootstrap.min.js')}}"></script>
+            <div class="container-fluid text-center pt-3 bg-dark text-white border-top">
+                <div class="row">
+                    <div class="col">
+                        <p>Matt, Miguel, Rani, & Co.<br>Columbus, OH<br>U.S.A</p>
+                    </div>
+                    <div class="col">
+                        <p><br>2020</p>
+                    </div>
+                </div>
+            </div>
         </footer>
+
+        <!--Include Bootstrap 4's javascript code-->
+        <script type="javascript" src="{{url_for('static', filename='js/bootstrap.min.js')}}"></script>
     </body>
