--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
 
 {% block main %}
-    <div class="jumbotron">
-        <h1>Matt, Miguel, and Rani</h1>
+    <div class="container">
+        <h1>Home page</h1>
+        <p class="text-left">Home page content would go here</p>
     </div>
 {% endblock main %}
